<resources>
    <string name="app_name">Foody</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_fragment">Recipes</string>
    <string name="recipe_favorite_fragment">Favorite</string>
    <string name="foodjoke_fragment">Joke</string>
    <string name="txt_no_internet_connection_error">No Internet Connection</string>
    <string name="txt_vegan">Vegan</string>
    <string name="txt_meal_type">Meal Type</string>
    <string name="txt_main_course">Main Course</string>
    <string name="txt_side_dish">Side Dish</string>
    <string name="txt_dessert">Dessert</string>
    <string name="txt_appetizer">Appetizer</string>
    <string name="txt_salad">Salad</string>
    <string name="txt_bread">Bread</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_soup">Soup</string>
    <string name="txt_beverage">Beverage</string>
    <string name="txt_sauce">Sauce</string>
    <string name="txt_marinade">Marinade</string>
    <string name="txt_finger_food">Finger Food</string>
    <string name="txt_snack">Snack</string>
    <string name="txt_drink">Drink</string>
    <string name="txt_diet_type">Diet Type</string>
    <string name="txt_gluten_free">Gluten Free</string>
    <string name="txt_ketogenic">Ketogenic</string>
    <string name="txt_vegetarian">Vegetarian</string>
    <string name="txt_pescetarian">Pescetarian</string>
    <string name="txt_paleo">Paleo</string>
    <string name="txt_primal">Primal</string>
    <string name="txt_whole30">Whole30</string>
    <string name="txt_apply">Apply</string>
    <string name="text_search">Search</string>
    <string name="txt_detail_activity">Details</string>
    <string name="txt_diary_free">Diary Free</string>
    <string name="txt_healthy">Healthy</string>
    <string name="txt_cheap">Cheap</string>
    <string name="txt_save_to_favrorites">Save to Favorites</string>
    <string name="txt_favorite_okay">Okay</string>
    <string name="txt_recipe_saved">Recipe saved.</string>
    <string name="txt_favorite_removed">Removed from Favorite.</string>
    <string name="txt_no_saved_favorite_data">No Favorite Recipes.</string>
    <string name="txt_delete_favorite">Delete Favorite Menu</string>
    <string name="txt_delete_all">Delete All</string>

    <string name="txt_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="txt_share">Share</string>

</resources>